<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorzEh</string>

    <string name="action_settings">Settings</string>
    <string name="set_password">Set Password</string>
    <string name="set_colors">Set Colors</string>
    <string name="enable_app">Enable ColorzEh</string>
    <string name="action_about">About</string>

    <string name="whatiscolorz">What is ColorzEh?</string>
    <string name="colorzis">ColorzEh is a custom lock screen attempting to prevent onlookers from knowing your password. It achieves this by providing 3 possible unlock patterns:</string>

    <string name="sequencedef">A sequence of colors</string>
    <string name="locationdef">A sequence of locations on the grid</string>
    <string name="quantitydef">A quantity of colors (order does not matter)</string>

    <string name="sequence">Sequence of Colors</string>
    <string name="location">Sequence of Locations</string>
    <string name="quantity">Quantity of Colors</string>

    <string name="set">Set</string>
    <string name="verify">Verify</string>
    <string name="finish">Finish</string>
    <string name="confirm">Confirm</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="setNXN">Size of grid</string>
    <string name="setSize">Set size</string>


    <string name="setPasswordText">"To set a password, click the checkbox of the pattern and press the \'Set\' button. You can then input your password in the grid at the bottom of the screen. Click \'Finish\' to finish your password. The number on the left indicates the order you want the pattern to be, if you choose multiple patterns to be your password"
    </string>

    <string name="aboutpage">"We are real cool, guys! We aren't very Canadian eh? But we try cause we love bears."</string>

    <string name="donate">Donate Now</string>
    <string name="close">Close</string>
    <string name="TLBtn">Top Left Button</string>
    <string name="TMBtn">Top Mid Button</string>
    <string name="TRBtn">Top Right Button</string>

    <string name="MLBtn">Mid Left Button</string>
    <string name="MMBtn">Mid Mid Button</string>
    <string name="MRBtn">Mid Right Button</string>

    <string name="BLBtn">Bot Left Button</string>
    <string name="BMBtn">Bot Middle Button</string>
    <string name="BRBtn">Bot Right Button</string>

    <color name="Red">#FF0000</color>
    <color name="Blue">#0000FF</color>
    <color name="Green">#00FF00</color>
    <color name="Yellow">#FFFF00</color>
    <color name="White">#FFFFFF</color>
    <color name="Background">#000000</color>


    <color name="red">#FF3333</color>
    <color name="blue">#3333FF</color>
    <color name="green">#66FF66</color>
    <color name="yellow">#FFFF66</color>

    <color name="orange">#FF9933</color>
    <color name="purple">#9933FF</color>
    <color name="pink">#FF66B2</color>

</resources>
