<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPasswordText"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!--<EditText-->
            <!--android:id="@+id/sequenceOrder"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:hint="@string/one"/>-->
        <Spinner
            android:id="@+id/sequenceOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/sequenceChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sequenceOrder"
            android:layout_toEndOf="@id/sequenceOrder"
            android:layout_centerVertical="true"
            android:onClick="onCheckboxClicked" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:text="@string/sequence"/>
        <Button
            android:id="@+id/sequenceSetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/set"
            android:enabled="false"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/locationOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/locationChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/locationOrder"
            android:layout_toEndOf="@id/locationOrder"
            android:layout_centerVertical="true"
            android:onClick="onCheckboxClicked" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:text="@string/location"/>
        <Button
            android:id="@+id/locationSetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:text="@string/set"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/quantityOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/quantityChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/quantityOrder"
            android:layout_toEndOf="@id/quantityOrder"
            android:layout_centerVertical="true"
            android:onClick="onCheckboxClicked" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:text="@string/quantity"/>
        <Button
            android:id="@+id/quantitySetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/set"
            android:enabled="false"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:enabled="false"
            />
        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:enabled="false"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:contentDescription="@string/TLBtn"
                android:id="@+id/top_left_set"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:background="@color/Red"/>
            <ImageButton
                android:contentDescription="@string/TMBtn"
                android:id="@+id/top_mid_set"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/Blue"/>

            <ImageButton
                android:contentDescription="@string/TRBtn"
                android:id="@+id/top_right_set"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Yellow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:contentDescription="@string/MLBtn"
                android:id="@+id/mid_left_set"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Yellow"/>
            <ImageButton
                android:contentDescription="@string/MMBtn"
                android:id="@+id/mid_mid_set"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Green"/>

            <ImageButton
                android:contentDescription="@string/MRBtn"
                android:id="@+id/mid_right_set"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:contentDescription="@string/BLBtn"
                android:id="@+id/bot_left_set"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Green"/>
            <ImageButton
                android:contentDescription="@string/BMBtn"
                android:id="@+id/bot_mid_set"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Blue"/>

            <ImageButton
                android:contentDescription="@string/BRBtn"
                android:id="@+id/bot_right_set"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Yellow"/>
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
