<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/Background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPasswordText"
        android:textColor="@color/White" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/sequenceOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/sequenceChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sequenceOrder"
            android:layout_toEndOf="@id/sequenceOrder"
            android:layout_centerVertical="true"
            android:onClick="onCheckboxClicked"
            android:textColor="@color/White"
            android:shadowColor="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sequence"
            android:textSize="@dimen/font_size_all"
            android:textColor="@color/White" />
        <Button
            android:id="@+id/sequenceSetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/set"
            android:enabled="false"
            android:minWidth="75dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/locationOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/locationChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/locationOrder"
            android:layout_toEndOf="@id/locationOrder"
            android:layout_centerVertical="true"
            android:onClick="onCheckboxClicked"
            android:shadowColor="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:text="@string/location"
            android:textSize="@dimen/font_size_all"
            android:textColor="@color/White" />
        <Button
            android:id="@+id/locationSetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:text="@string/set"
            android:minWidth="75dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/quantityOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/quantityChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/quantityOrder"
            android:layout_toEndOf="@id/quantityOrder"
            android:layout_centerVertical="true"
            android:onClick="onCheckboxClicked"
            android:shadowColor="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:text="@string/quantity"
            android:textSize="@dimen/font_size_all"
            android:textColor="@color/White" />
        <Button
            android:id="@+id/quantitySetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/set"
            android:enabled="false"
            android:minWidth="75dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:enabled="false"
            android:minWidth="150dp" />
        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:enabled="false"
            android:minWidth="150dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal">
        <GridView
            android:id="@+id/nxnGridSet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="1dp"
            android:numColumns="4"
            android:stretchMode="columnWidth"/>
    </LinearLayout>

    </LinearLayout>
</ScrollView>
